package.json: update author

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ionic-angular-todo",
   "version": "0.0.1",
-  "author": "Ionic Framework",
+  "author": "Devin Shoemaker",
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
