--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
-  "description": "An Ionic project",
+  "description": "A todo app built with Ionic",
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged --pattern 'src/**/*.{js,jsx,ts,tsx,json,css,scss,md,html}'"
