--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "cypress": "^3.8.0",
+    "eslint-plugin-cypress": "^2.8.1",
     "husky": "^3.1.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
