cypress: add Testing Library
https://testing-library.com/docs/cypress-testing-library/intro

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../tsconfig.json",
   "include": ["integration/*.ts", "support/*.ts", "../node_modules/cypress"],
   "compilerOptions": {
-    "types": ["cypress", "node"],
+    "types": ["cypress", "node", "@types/testing-library__cypress"],
     "target": "es6"
   }
 }
