package.json: add AngularFire
`ng add @angular/fire`

--- a/angular.json
+++ b/angular.json
@@ -193,6 +193,10 @@
               "devServerTarget": "app:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
