--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~8.1.2",
     "@briebug/cypress-schematic": "^3.0.2",
     "@capacitor/core": "1.4.0",
+    "@capacitor/ios": "^1.4.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
