--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@briebug/cypress-schematic": "^3.0.2",
+    "@capacitor/android": "^1.4.0",
     "@capacitor/core": "1.4.0",
     "@capacitor/ios": "^1.4.0",
     "@ionic-native/core": "^5.0.0",
